add conditon list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="searchPage">
         <div class="form-group">
           <label for="name">Pacient Name</label>
-          <input type="text" class="form-class" placeholder="Name">
+          <input type="text" class="form-class name" value="name" placeholder="Name">
         </div>
         <div class="form-group">
           <label for="condition">Condition</label>
