add search doctor implementation

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="container-fluid">
       <div class="searchPage">
         <div class="form-group">
-          <label for="name">Pacient Name</label>
-          <input type="text" class="form-class name" value="name" placeholder="Name">
+          <label for="name">Patient Name</label>
+          <input type="text" class="form-class name" value="" placeholder="Name">
         </div>
         <div class="form-group">
           <label for="condition">Condition</label>
@@ -29,6 +29,9 @@
           <input type="text" class="form-class" value="Portland" disabled>
         </div>
         <input type="button" class="btn findDoc" value="Find">
+      </div>
+      <div class="docList">
+
       </div>
     </div>
   </body>
